<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/telaListaPropriedades"
    tools:context="com.nutricampus.app.activities.ListaPropriedadesActivity">


    <include layout="@layout/content_lista_propriedades" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/list"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        app:fabSize="normal" />

    <LinearLayout
        android:id="@+id/layoutPropriedade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_floating_propriedade"
            style="@style/TextAppearance.AppCompat.Medium"
            android:id="@+id/tituloFabPropriedade"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/colorFabTextView"
            android:background="@color/colorFabTextViewBack" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabPropriedade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/plus"
            android:clickable="true"
            app:fabSize="mini"
            app:backgroundTint="@color/colorFabPropriedade" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutProprietario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_floating_proprietarios"
            style="@style/TextAppearance.AppCompat.Medium"
            android:id="@+id/tituloFabProprietario"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/colorFabTextView"
            android:background="@color/colorFabTextViewBack" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabProprietario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/pessoa"
            android:clickable="true"
            app:fabSize="mini"
            app:backgroundTint="@color/colorFabProprietarios" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>