<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nutricampus.app.activities.ListaProprietariosActivity"
    tools:showIn="@layout/activity_lista_proprietarios">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/caixa_arredondada"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_form"
        android:id="@+id/resultado_busca_proprietarios">

        <TextView
            android:id="@+id/text_quantidade_encontrados"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="23dp"
            android:textAlignment="center"
            android:textSize="17sp" />

        <View
            android:id="@+id/linha"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLinha"
            android:layout_marginBottom="10dp" />

        <ListView
            android:id="@+id/listaProprietarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="multipleChoice"
            android:listSelector="@color/colorItemListSelected"
            android:longClickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/campo_nenhum_proprietario"
            android:drawableTop="@drawable/hat"
            android:id="@android:id/empty"
            android:gravity="center" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>