...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/input_pesquisa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textFilter|textCapWords"
        android:imeOptions="actionSearch" />

</LinearLayout>
